# mcp-activitysmith

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  version-bump.yml
mcp_activitysmith/: __init__.py  auth.py  cli.py  client.py  server.py  tools.py
